--- a/productos/templates/productos/inicio.html
+++ b/productos/templates/productos/inicio.html
@@ -8,5 +8,11 @@
 {% endblock %}
 
 {% block content %}
-
+<p>Dirección: Av. Principal #1234, Ciudad, País</p>
+<p>Dirección: Av. Principal #1234, Ciudad, País</p>
+<p>Dirección: Av. Principal #1234, Ciudad, País</p>
+<p>Dirección: Av. Principal #1234, Ciudad, País</p>
+<p>Dirección: Av. Principal #1234, Ciudad, País</p>
+<p>Dirección: Av. Principal #1234, Ciudad, País</p>
+<p>Dirección: Av. Principal #1234, Ciudad, País</p>
 {% endblock %}
