--- a/productos/templates/productos/productos.html
+++ b/productos/templates/productos/productos.html
@@ -1,5 +1,133 @@
 {% extends "productos/base.html" %}
-
+{% load static %}
 {% block content %}
+
+<div class="prodConteiner">
+    <h1>Nuestros Productos</h1>
+    <div class="prodContent">
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/alfajores1.jpg' %}" alt="">
+  
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$1200</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/alfajores2.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$1200</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/alfajores3.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion</h3>
+                <div class="price">
+                    <p>$1500</p>
+                    <a href="#" class="btn-1">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/alfajores4.jpeg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$1700</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/alfajores5.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$1700</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/barra1.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$2200</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/barra2.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$2000</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/barra3.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$2500</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/Bombones1.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$9000</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/bombones2.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$9000</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+        <!--Producto -->
+        <div class="prod1">
+            <img src="{% static 'productos/imgProd/Bombones3.jpg' %}" alt="">
+            <div class="prodTxt">
+                <h3>Descripcion
+                    <div class="price">
+                        <p>$12000</p>
+                        <a href="#" class="btn-1">Comprar</a>
+                    </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
