--- a/productos/templates/productos/inicio.html
+++ b/productos/templates/productos/inicio.html
@@ -9,4 +9,52 @@
 
 {% block content %}
 
+<header class="contenedorPrincipal">
+    <div class="barraSuperior">
+        <div class="logo">
+            <img src="./img/chocologo.png" alt="Logo de Chocolates de Ensueños">
+        </div>
+        <nav class="barraNavegacion">
+        </nav>
+    </div>
+
+    <div class="container">
+
+        <div class="contenidoPrincipal">
+            <section>
+                <p class="bold-text">Bienvenidos a Chocolates de Ensueños, donde la pasión por el cacao se convierte en arte.
+                    Nos especializamos en la fabricación artesanal de chocolates finos, utilizando ingredientes de la más alta calidad 
+                    y métodos tradicionales. Nuestro compromiso es ofrecer una experiencia de sabor única, combinando innovación y tradición en cada bocado.
+                    Descubre la magia del chocolate con Chocolates de Ensueños.</p>
+                <p class="bold-text">En nuestra sección de novedades, mantente al tanto de las últimas noticias y
+                    actualizaciones sobre nuestra
+                    empresa y la industria del chocolate.</p>
+            </section>
+            <br>
+                <h1 class="bold-text">NOVEDADES</h1>
+            
+        </div>
+        <MAIN>
+            <div class="recuadro">
+                <div id="imagen-texto" class="contenidoAdicional">
+                    <!-- Aquí se cargarán las imágenes y textos de novedades -->
+                </div>
+                <div class="navegacion">
+                    <button id="anterior">&#10094;</button>
+                    <button id="siguiente">&#10095;</button>
+                </div>
+            </div>
+            <section>
+                <h1 class="bold-text">Nuestros Productos</h1>
+                <div class="contenedor-imagenes">
+                    <img src="img/Barra2.jpg" alt="Imagen 1">
+                    <img src="img/Bombones3.jpg" alt="Imagen 2">
+                    <img src="img/Alfajores1.jpg" alt="Imagen 3">
+                </div>
+            </section>  
+        </MAIN>
+    </div> 
+    
+</header>
+
 {% endblock %}
