--- a/productos/templates/productos/inicio.html
+++ b/productos/templates/productos/inicio.html
@@ -19,9 +19,11 @@
     </div>
 
     <div class="container">
-
         <div class="contenidoPrincipal">
+
             <section>
+                <h2>Chocolates de Ensueños</h2>
+
                 <p class="bold-text">Bienvenidos a Chocolates de Ensueños, donde la pasión por el cacao se convierte en arte.
                     Nos especializamos en la fabricación artesanal de chocolates finos, utilizando ingredientes de la más alta calidad 
                     y métodos tradicionales. Nuestro compromiso es ofrecer una experiencia de sabor única, combinando innovación y tradición en cada bocado.
