--- a/productos/templates/productos/base.html
+++ b/productos/templates/productos/base.html
@@ -18,7 +18,7 @@
     <header class="contenedorPrincipal">
         <div class="barraSuperior">
             <div class="logo">
-                <img src="{% static 'productos/img/chocologo.png' %}" alt="Logo de Chocolates de Ensueños">
+                <img src="{% static 'productos/img/chocologo_.png' %}" alt="Logo de Chocolates de Ensueños">
             </div>
             <nav class="barraNavegacion">
             </nav>
