--- a/productos/templates/productos/novedades.html
+++ b/productos/templates/productos/novedades.html
@@ -17,7 +17,7 @@
         <p>Acompáñanos en nuestro próximo evento de degustación donde podrás probar nuestras últimas creaciones y conocer más sobre el proceso de elaboración del chocolate. ¡Te esperamos!</p>
     </article>
 
-    <div id="imagenes-novedades">
+    <!-- <div id="imagenes-novedades">
         <div>
             <img src="img/Semilla.jpeg" alt="Imagen 1" class="imagenAdicional">
             <p class="contenidoAdicional">Nuestros Chocolates estan hechos de las semillas de mas alta calidad del fruto del árbol de cacao. Estas semillitas también se siembran para cultivar nuevos árboles de cacao y asegurar que ¡siempre tengamos suficiente chocolate en el mundo!.</p>
@@ -29,7 +29,7 @@
         <div>
             <img src="img/imgBasica3.bmp" alt="Imagen 3" class="imagenAdicional">
             <p class="contenidoAdicional">Quisque euismod purus ut nunc gravida, vel tincidunt felis viverra.</p>
-        </div>
+        </div> -->
         
 </section>
 
