--- a/productos/templates/productos/contacto.html
+++ b/productos/templates/productos/contacto.html
@@ -1,7 +1,42 @@
-{% extends "./productos/base.html" %}
+{% extends "productos/base.html" %}
 
 {% block content %}
+<div class="contenidoPrincipal">
+    <section class="contacto">
+        <h1>Contacto</h1>
+        <p>Si tienes alguna consulta o comentario, por favor, completa el siguiente formulario y nos
+            pondremos en contacto contigo a la brevedad.</p>
 
+        <div class="form-container">
+            <form action="#" method="POST" class="form">
+                {% csrf_token %}
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
 
+                <label for="apellido">Apellido:</label>
+                <input type="text" id="apellido" name="apellido" required>
 
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="telefono">Teléfono:</label>
+                <input type="tel" id="telefono" name="telefono">
+
+                <label for="tipoUsuario">Tipo de Usuario:</label>
+                <div class="radio-group">
+                    <input type="radio" id="comprador" name="tipoUsuario" value="comprador" required>
+                    <label for="comprador">Comprador</label>
+
+                    <input type="radio" id="mayorista" name="tipoUsuario" value="mayorista" required>
+                    <label for="mayorista">Mayorista</label>
+                </div>
+
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" required></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+</div>
 {% endblock %}
