--- a/productos/templates/productos/novedades.html
+++ b/productos/templates/productos/novedades.html
@@ -4,33 +4,30 @@
 
 <section class="novedades">
     <h1>Novedades</h1>
-    <article>
-        <h2>Nueva Línea de Chocolates Veganos</h2>
-        <p>Nos complace anunciar el lanzamiento de nuestra nueva línea de chocolates veganos, hechos con los mejores ingredientes y sin comprometer el sabor. ¡Prueba estos deliciosos chocolates hoy mismo!</p>
-    </article>
-    <article>
-        <h2>Promoción Especial del Mes</h2>
-        <p>Durante este mes, disfruta de un 20% de descuento en todos nuestros chocolates artesanales. No te pierdas esta oportunidad de degustar nuestros productos a un precio especial.</p>
-    </article>
-    <article>
-        <h2>Evento de Degustación</h2>
-        <p>Acompáñanos en nuestro próximo evento de degustación donde podrás probar nuestras últimas creaciones y conocer más sobre el proceso de elaboración del chocolate. ¡Te esperamos!</p>
+    
+    <!-- Mostrar la primera novedad -->
+    <article class="novedad">
+        <h2>{{ primer_novedad.nombre }}</h2>
+        <div class="descripcion">
+            <p>{{ primer_novedad.descripcion }}</p>
+        </div>
+        <div class="imagen">
+            <img src="{{ primer_novedad.imagen.url }}" alt="{{ primer_novedad.nombre }}">
+        </div>
     </article>
 
-    <!-- <div id="imagenes-novedades">
-        <div>
-            <img src="img/Semilla.jpeg" alt="Imagen 1" class="imagenAdicional">
-            <p class="contenidoAdicional">Nuestros Chocolates estan hechos de las semillas de mas alta calidad del fruto del árbol de cacao. Estas semillitas también se siembran para cultivar nuevos árboles de cacao y asegurar que ¡siempre tengamos suficiente chocolate en el mundo!.</p>
+    <!-- Mostrar todas las demás novedades -->
+    {% for novedad in todas_novedades %}
+    <article class="novedad">
+        <h2>{{ novedad.nombre }}</h2>
+        <div class="descripcion">
+            <p>{{ novedad.descripcion }}</p>
         </div>
-        <div>
-            <img src="img/Fabricacion.jpg" alt="Imagen 2" class="imagenAdicional">
-            <p class="contenidoAdicional">Vestibulum vitae libero dapibus, pulvinar arcu vel, interdum tortor.</p>
+        <div class="imagen">
+            <img src="{{ novedad.imagen.url }}" alt="{{ novedad.nombre }}">
         </div>
-        <div>
-            <img src="img/imgBasica3.bmp" alt="Imagen 3" class="imagenAdicional">
-            <p class="contenidoAdicional">Quisque euismod purus ut nunc gravida, vel tincidunt felis viverra.</p>
-        </div> -->
-        
+    </article>
+    {% endfor %}
 </section>
 
 {% endblock %}
