--- a/productos/templates/productos/base.html
+++ b/productos/templates/productos/base.html
@@ -74,7 +74,7 @@
             <p>&copy; 2024 Chocolates de Ensueños. Todos los derechos reservados.</p>
         </div>
     </footer>
-    <script src="{% static 'productos/js/index.js' %}"></script>
+    <!-- <script src="{% static 'productos/js/index.js' %}"></script> -->
 </body>
 
 </html>
