--- a/productos/static/productos/css/style.css
+++ b/productos/static/productos/css/style.css
@@ -205,7 +205,7 @@ h2 {
 
     background-color: #fff;
     border-radius: 8px;
-    padding: 40px;
+    /* padding: 40px; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 800px;
     margin: 0 auto;
@@ -223,9 +223,9 @@ h2 {
     /* Negrita intensa */
     /* font-family: 'Source Sans Pro', sans-serif; Fuente cursiva */
     font-style: italic;
-    /* Cursiva */
-    font-size: 25px;
-    /* Cambia la fuente a Arial*/
+
+    font-size: 17px;
+    
 }
 
 /* Estilos para la imagen adicional */
@@ -317,6 +317,36 @@ h2 {
     background-color: rgba(92, 82, 82, 0.7);
 }
 
+
+
+
+.contenidoNovedad{
+    font-size:medium;
+    width: 100%;
+    height: auto;
+    padding-top: 5%;
+    /* background-color: #FF5A2C; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.contenidoNovedad .img{
+    object-fit: cover;
+    /* Ajustar la imagen para cubrir el espacio disponible */
+    max-height: 250px;
+    /* La imagen ocupa toda la altura del recuadro */
+    width: auto;
+    /* La imagen ocupa la mitad del recuadro */
+    float: right;
+    margin-top: 1px;    }
+/* .contenidoNovedad p{
+    background-color: #FF5A2C;
+} */
+
+
+
+
 /********************************** MEDIA QUERY´S */
 
 /*Edicion pantalla*/
@@ -358,6 +388,7 @@ h2 {
 
     .recuadro {
         /* border: 5px solid black; */
+        border: none;
         box-sizing: border-box;
         display: flex;
         height: 300px;
@@ -379,6 +410,7 @@ h2 {
         font-size: 15px;
         margin-bottom: 5px;
         justify-content: center;
+        display: flex;
     }
 
     .imagenAdicional {
@@ -386,7 +418,7 @@ h2 {
         /* Ajustar la imagen para cubrir el espacio disponible */
         height: 100%;
         /* La imagen ocupa toda la altura del recuadro */
-        width: 50%;
+        width: 75%;
         /* La imagen ocupa la mitad del recuadro */
         float: right;
         margin-top: 1px;
